--- a/client/src/organism/style.css
+++ b/client/src/organism/style.css
@@ -1,24 +1,25 @@
-.profiAvaImg {
-    width: 150px;
-    border-radius: 100px;
-
-}
-
-.circleAva {
-    width: 160px;
-    height: 160px;
-    border-radius: 150px;
-    border: 6px solid #C0FDB6;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-}
-
-.profiIcon {
-    width: 60px;
-}
-
 .gpa {
     font-size: 53px;
     color: #76FFF7;
+}
+
+.container {
+    margin-top: 10px;
+}
+
+.progress-bar-vertical {
+    width: 20px;
+    min-height: 100px;
+    display: flex;
+    align-items: flex-end;
+    margin-right: 20px;
+    float: left;
+}
+
+.progress-bar-vertical .progress-bar {
+    width: 100%;
+    height: 0;
+    -webkit-transition: height 0.6s ease;
+    -o-transition: height 0.6s ease;
+    transition: height 0.6s ease;
 }
