--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,11 @@
+  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+
 body,
 html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 * {
